--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "leaflet-react-demo",
   "version": "0.1.0",
+  "homepage": "http://doublebyte1.github.io/ivaucher-frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,13 +14,19 @@
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.0",
     "react-scripts": "3.2.0",
+    "serve": "^13.0.2",
     "swr": "^0.1.15"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
+
+    
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
