--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,14 +21,14 @@ services:
 
   app:
     container_name: app
-    image:  doublebyte/ivaucher-frontend:latest
-    #build:
-    #  context: .
-    #  dockerfile: Dockerfile
+    #image:  doublebyte/ivaucher-frontend:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - '.:/app'
       - '/app/node_modules'
-    ports:
-      - 3001:3000
+    # ports:
+    #   - 3001:3000
     environment:
       - CHOKIDAR_USEPOLLING=true
